# Library-Management

./: CMakeLists.txt  README.md  main.cpp
Controller/: Controller.cpp  Controller.h
Data/: books.csv  loans.csv  users.csv
Model/: Book.cpp  Book.h  Library.cpp  Library.h  LibraryDB.cpp  LibraryDB.h  Loan.cpp  Loan.h  User.cpp  User.h
View/: View.cpp  View.h
